src/objects/Applications__c.object
<CustomObject>
    <fields>
        <fullName>White__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>newdate__c</fullName>
        <label>newdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>of_people_in_the_H_H_Adults__c</fullName>
        <label># of people in the H/H - Adults</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Applications</label>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>Applied_Date_time__c</columns>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Prospect_Name__c</columns>
        <columns>Tenant__c</columns>
        <columns>Pseudo_SSN__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Citizenship__c</columns>
        <columns>Ethnicity__c</columns>
        <columns>Gender__c</columns>
        <columns>Age__c</columns>
        <columns>DOB__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Applications</label>
    </listViews>
    <listViews>
        <fullName>Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Age__c</columns>
        <columns>Ethnicity__c</columns>
        <columns>Family_Annual_Income__c</columns>
        <columns>Gender__c</columns>
        <columns>Prospect_Name__c</columns>
        <columns>Tenant__c</columns>
        <columns>Total_People__c</columns>
        <columns>Applied_Date_time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>8/27/2017 12:00 AM</value>
        </filters>
        <label>Last Week</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Prospect_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Tenant__c</columns>
        <columns>Citizenship__c</columns>
        <columns>Ethnicity__c</columns>
        <columns>Gender__c</columns>
        <columns>Family_Annual_Income__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>8/28/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Applications__c.Closed</value>
        </filters>
        <label>This Week</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Prospect_Name__c</columns>
        <columns>Tenant__c</columns>
        <columns>of_people_in_the_H_H_Adults__c</columns>
        <columns>Age__c</columns>
        <columns>Citizenship__c</columns>
        <columns>DOB__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Applications__c.Closed</value>
        </filters>
        <label>Today&apos;s Applications</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_s_Application</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Prospect_Name__c</columns>
        <columns>Tenant__c</columns>
        <columns>Gender__c</columns>
        <columns>Family_Annual_Income__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_People__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday&apos;s Application</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>